- fetching of text bodies was wrong, using decoded body from db instead of original ones - affinity can be controlled from the sora-admin using admin API
